--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "train": "nodemon train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nolan",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "nodemon": "^3.1.10"
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "mongodb": "^3.2.6",
+    "nodemon": "^2.0.15"
   }
 }
